# tarifa

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/tarifa/: Cargo.toml  README.md
crates/tarifa-combine/: Cargo.toml  README.md
crates/tarifa-combine/src/: combiner.rs  equal_weight.rs  ic_weight.rs  lib.rs  vol_scale.rs
crates/tarifa-eval/: Cargo.toml  README.md
crates/tarifa-eval/src/: backtest.rs  decay.rs  evaluator.rs  ic.rs  lib.rs  metrics.rs
crates/tarifa-factors/: Cargo.toml
crates/tarifa-factors/src/: lib.rs
crates/tarifa-fmp/: Cargo.toml
crates/tarifa-fmp/src/: client.rs  error.rs  lib.rs  types.rs
crates/tarifa-signals/: Cargo.toml  README.md
crates/tarifa-signals/src/: lib.rs  registry.rs
crates/tarifa-signals/src/momentum/: long_term.rs  medium_term.rs  mod.rs  short_term.rs
crates/tarifa-signals/src/quality/: margins.rs  mod.rs  roa.rs  roe.rs
crates/tarifa-signals/src/value/: book_to_price.rs  earnings_yield.rs  fcf_yield.rs  mod.rs
crates/tarifa-traits/: Cargo.toml  README.md
crates/tarifa-traits/src/: alpha.rs  error.rs  evaluator.rs  lib.rs  signal.rs  stats.rs  types.rs
crates/tarifa/src/: lib.rs
examples/: CONSIDERATIONS.md  Cargo.toml  momentum_backtest.rs  multifactor_backtest.rs  quality_backtest.rs  value_backtest.rs
examples/src/: lib.rs
