[package]
name = "tarifa-factors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Adapter layer to use factors crate factors as tarifa signals"

[dependencies]
tarifa-traits.workspace = true
polars.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true

factors.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
