[package]
name = "tarifa-signals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tarifa-traits.workspace = true
polars.workspace = true
ndarray.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
