[package]
name = "tarifa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Alpha model for equity return prediction"

[dependencies]
# tarifa crates
tarifa-traits = { workspace = true }
tarifa-signals = { workspace = true }
tarifa-combine = { workspace = true }
tarifa-eval = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
