[package]
name = "tarifa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Alpha model for equity return prediction"

[dependencies]
# tarifa crates
tarifa-traits = { workspace = true }
factors = { workspace = true }
tarifa-combine = { workspace = true }
tarifa-eval = { workspace = true }
tarifa-fmp = { workspace = true }

# Dependencies for examples
polars = { workspace = true }
chrono = { workspace = true }
ndarray = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
